--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "bone",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "A SCSS library",
-  "license": "ISC",
+  "license": "MIT",
   "author": "Oscar Alfonso Guerrero Nuñez",
   "files": [
     "src/*",
     "CHANGELOG.md",
-    "LICENSE"
+    "LICENSE",
+    "README.md",
+    "index.scss"
   ],
   "type": "module",
   "repository": "CarcajadaArtificial/bone",
