--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "garlicss",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "GarliCSS 🧄 is an SCSS library.",
   "license": "MIT",
   "author": "Oscar Alfonso Guerrero Nuñez",
@@ -14,15 +14,16 @@
   "repository": "CarcajadaArtificial/garlicss",
   "scripts": {
     "publish": "npm publish; git checkout docs; git merge main --strategy-option ours; npm run doc; git add .; git commit -m \"Auto-update docs site\"; git push; git checkout main",
-    "build": "sass src/default/index.scss dist/style.css --no-source-map; sass src/default/index.scss dist/style.min.css --no-source-map --style=compressed",
+    "build": "sass src/default/index.scss dist/style.css --no-source-map; sass src/default/index.scss dist/style.min.css --no-source-map --style=compressed -q",
     "doc": "sassdoc src/",
     "play": "sass test/playground/index.scss test/playground/result.css --no-source-map",
     "test": "mocha"
   },
   "devDependencies": {
+    "@sass-fairy/color": "^1.0.2",
     "mocha": "^10.2.0",
     "sass": "^1.58.3",
-    "sass-door": "^0.0.20",
+    "sass-door": "^0.0.22",
     "sass-true": "^7.0.0",
     "sassdoc": "^2.7.4"
   }
