--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
   "repository": "CarcajadaArtificial/garlicss",
   "scripts": {
     "publish": "npm publish; git checkout docs; git merge main --strategy-option ours; npm run doc; git add .; git commit -m \"Auto-update docs site\"; git push; git checkout main",
-    "doc": "sassdoc src/",
     "play": "sass test/playground/index.scss test/playground/style.css --no-source-map -w",
-    "test": "mocha",
-    "install-sassdoor": "git subtree add --prefix=.github/dep/sassdoor https://github.com/CarcajadaArtificial/sass-door.git main --squash",
-    "update-sassdoor": "git subtree pull --prefix=.github/dep/sassdoor https://github.com/CarcajadaArtificial/sass-door.git main --squash"
+    "test": "mocha"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
