--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "garlicss",
-  "version": "0.2.53",
+  "version": "0.3.1",
   "description": "GarliCSS 🧄 is a SCSS library.",
   "license": "MIT",
   "author": "Oscar Alfonso Guerrero Nuñez",
@@ -10,6 +10,7 @@
     "LICENSE",
     "README.md"
   ],
+  "main": "index.js",
   "type": "module",
   "repository": "CarcajadaArtificial/garlicss",
   "scripts": {
@@ -20,8 +21,6 @@
   "devDependencies": {
     "mocha": "^10.2.0",
     "sass": "^1.58.3",
-    "sass-door": "^0.0.35",
-    "sass-true": "^7.0.0",
-    "sassdoc": "^2.7.4"
+    "sass-true": "^7.0.0"
   }
 }
